# bumbleb-test

./: README.md  comman.py
Problem_1/: reverse.py  reverseNotes.txt  reverseTest.py
Problem_2/: anagram.py  anagramTest.py
Problem_3/todoApp/backend/todo_app/: .env  pyproject.toml
Problem_3/todoApp/backend/todo_app/todo_app/: main.py  setting.py
Problem_4/: Document.txt
Problem_6/: document.txt
