[project]
name = "todo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lavish",email = "lavishchhatwani95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg (>=3.2.4,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg-binary (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
